# bevyrogue

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml
.agents/skills/: bevy-enoki-vfx
.cargo/: config.toml
.config/: nextest.toml
.gsd/: CAPTURES.md  CODEBASE.md  CONTEXT.md  DECISIONS.md  KNOWLEDGE.md  MILESTONE-PORTFOLIO.md  OVERRIDES.md  PREFERENCES.md  PROJECT-DRAFT.md  PROJECT.md  QUEUE-ORDER.json  REQUIREMENTS.md  TIER3-CONTINUE.md  audit-log.jsonl  continue.md  gsd.db  state-manifest.json
.gsd/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.gsd/exec/: 00bd2873-512a-4b73-9574-4d6dcc8ed415.meta.json  015bf072-7f5a-4deb-8dfb-a97a279a177b.meta.json  015bf072-7f5a-4deb-8dfb-a97a279a177b.stderr  015bf072-7f5a-4deb-8dfb-a97a279a177b.stdout  02b5e5e6-a357-4bc7-acc0-055e59e2b7f9.meta.json  02b5e5e6-a357-4bc7-acc0-055e59e2b7f9.stderr  03cb179c-86f1-4d7f-bfca-fff68dc37870.meta.json  03cb179c-86f1-4d7f-bfca-fff68dc37870.stdout  04f70f84-728e-4ac5-a9a6-98a5e515654b.meta.json  04f70f84-728e-4ac5-a9a6-98a5e515654b.stdout  04fc0ebe-b652-473a-b0ad-43295350eb85.meta.json  05d4f2f8-8751-4a6d-88d2-ea0e0c0fff38.meta.json  05d4f2f8-8751-4a6d-88d2-ea0e0c0fff38.stderr  05d4f2f8-8751-4a6d-88d2-ea0e0c0fff38.stdout  0626e4e4-e130-4edf-a5cd-d7397ad7aaff.meta.json  0626e4e4-e130-4edf-a5cd-d7397ad7aaff.stderr  0626e4e4-e130-4edf-a5cd-d7397ad7aaff.stdout  077ce831-8803-43ff-bfac-3b21346130a6.meta.json  077ce831-8803-43ff-bfac-3b21346130a6.stderr  077ce831-8803-43ff-bfac-3b21346130a6.stdout  097bd04a-f42e-43ff-b5aa-54ddd7e46321.meta.json  09eeba1a-33ca-4c9d-b1f2-8b46720e3f5a.meta.json  09eeba1a-33ca-4c9d-b1f2-8b46720e3f5a.stderr  0b7259e8-b4fb-4e74-a58e-83061b7f785a.meta.json  0b7259e8-b4fb-4e74-a58e-83061b7f785a.stdout  0cf9a7fe-d9e4-44f5-9417-b712b465433f.meta.json  0cf9a7fe-d9e4-44f5-9417-b712b465433f.stdout  0d436a79-fe79-4f8f-861b-8bef9dfde6f2.meta.json  0d436a79-fe79-4f8f-861b-8bef9dfde6f2.stdout  1031c502-012b-48fc-8fc3-12c7853108b5.meta.json  1031c502-012b-48fc-8fc3-12c7853108b5.stderr  1031c502-012b-48fc-8fc3-12c7853108b5.stdout  11bbc7b5-241b-4b5c-9710-e0ce0dce8a6a.meta.json  11bbc7b5-241b-4b5c-9710-e0ce0dce8a6a.stdout  153dda45-a884-4325-8ce9-4b3802aba6c8.meta.json  153dda45-a884-4325-8ce9-4b3802aba6c8.stderr  153dda45-a884-4325-8ce9-4b3802aba6c8.stdout  155da158-d2a7-43d2-ba61-7be85b670398.meta.json  155da158-d2a7-43d2-ba61-7be85b670398.stdout  1b37b9e8-6166-489b-a7eb-e7cfe2b6e6d6.meta.json  (+477 more)
.gsd/forensics/: m021-s06-auto-stuck-2026-05-16.md
.gsd/safety/: evidence-M002-S02-T05.json  evidence-M004-S04-T03.json  evidence-M012-S01-T02.json  evidence-M012-S06-T01.json  evidence-M016-S01-T03.json  evidence-M016-S03-T02.json  evidence-M016-S03-T04.json  evidence-M016-S05-T01.json  evidence-M021-S04-T01.json  evidence-M021-S04-T02.json  evidence-M021-S04-T03.json  evidence-M021-S04-T04.json  evidence-M021-S05-T01.json  evidence-M021-S05-T03.json  evidence-M021-S05-T04.json  evidence-M021-S06-T03.json  evidence-M021-S07-T04.json  evidence-M021-S10-T03.json
.gsd/schedules/: update.dot
.gsd/spikes/: README.md
.gsd/workflows/spikes/M021-timeline-fsm/: Cargo.toml  FINDINGS.md
.gsd/workflows/spikes/M021-timeline-fsm/src/: agumon.rs  dorumon.rs  gabumon.rs  lib.rs  tentomon.rs
.gsd/workflows/spikes/M021-timeline-fsm/tests/: validation.rs
assets/data/: party.ron  party.ron.bak  skills.ron  units.ron
assets/vfx/: fire_test.particle.ron  water_test.particle.ron
doc/: help.html  settings.html
doc/check/: all.html  index.html
doc/search.index/: root.js
docs/: M002-S06-windowed-smoke.md  agent-testing.md  analyze-quality-repo.md  combat_current.md  refactor-validation-prompt.md  setup.md  vfx-next-steps.md
docs/future_design_draft/: 01_goal.md  02-01_data_logic_separation.md  02-02_animation_manifest.md  02-02b_animation_fsm.md  02-02c_dematerialize_pattern.md  02-02d_vfx_positioning.md  02-02e_passive_presentation.md  02-03_blueprint_plugin.md  02-04_strong_typing.md  02-05_tunable_catalog.md  02-06_kernel_suspend_resume.md  02-07_skill_as_plugin.md  02-08_effect_cascade.md  03_run_loop_cli.md  04_enemy_roster.md  05_slices.md  06_out_of_scope.md  07_definition_of_done.md  08_roster_minimal.md  09_ui_surface.md  README.md
docs/research/: sprite_pipeline_evaluation.md
docs/uat/: M002-S06-windowed-smoke.md  M004-vfx-signoff.md  combat-review-2026-05-27.md
examples/: dump_schedule.rs
scripts/: capture-windowed-m004-vfx.sh  capture-windowed-smoke.sh  check_loc_cap.sh  gen_flame_sheet.py  gen_soft_particle.py  repomix-review.sh
src/: agent_tracing.rs  headless.rs  lib.rs  main.rs  party_validation.rs  warn_once.rs  windowed.rs
src/animation/: anim_graph.rs  atlas.rs  clip.rs  mod.rs  placement.rs  player.rs  plugin.rs  reaction.rs  registry.rs  validation.rs  vfx.rs  vfx_asset.rs
src/combat/: action_query.rs  av.rs  battery_loop.rs  bevy_types.rs  bootstrap.rs  buffs.rs  counterplay.rs  damage.rs  damage_tests.rs  enemy_ai.rs  enemy_counterplay.rs  energy.rs  events.rs  follow_up.rs  follow_up_tests.rs  holy_support.rs  kernel.rs  kit.rs  log.rs  mod.rs  modifiers.rs  (+22 more)
tests/: README.md  _tmp_inspect_timeline.rs  action_affordance_consumers.rs  action_affordance_query.rs  action_query.rs  add_new_digimon_isolation.rs  agumon_baby_burner_reactive.rs  agumon_sharp_claws_asset.rs  anim_asset_validation.rs  anim_gameplay_command_forbidden.rs  anim_graph_asset.rs  anim_graph_parse.rs  anim_player_fsm.rs  anim_registry.rs  anim_stance_asset.rs  anim_validation.rs  animation.rs  assets_data.rs  battery_loop_kernel.rs  block_reaction_pipeline.rs  blueprint_signal_dispatcher.rs  blueprints_infra.rs  bootstrap_encounter.rs  bootstrap_spawn_composition.rs  bouncing_fire_off_baseline.rs  boundary_contract.rs  buffs_internals.rs  cast_id_propagation.rs  cleanse_effect.rs  clip_asset.rs  clip_atlas_parity.rs  clip_geometry_parity.rs  clip_parse.rs  combat_cli_shared_surface.rs  combat_coherence.rs  combat_damage_edge.rs  combat_damage_matrix.rs  combat_resolution_apply.rs  combat_resolution_bounce.rs  combat_resolution_streak.rs  (+133 more)
tools/: verify_m021_s06_t04.sh
(+2256 files in other folders)
