[package]
name = "bevyrogue"
version = "0.1.0"
edition = "2024"

[dependencies]
# Headless-only feature set (D017). `windowed` re-enables the rendering stack.
bevy = { version = "=0.18.1", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_log",
    "bevy_state",
    "file_watcher",
] }
bevy_egui = { version = "=0.39.1", optional = true }
# Windowed-only GPU 2D particle backend (S04 spike). Hard-depends on the full
# bevy render stack, so it MUST stay behind `windowed` (R005). The
# `tests/dependency_gating.rs` binary proves it never leaks into the headless graph.
bevy_enoki = { version = "0.6", optional = true }
bevy_common_assets = { version = "0.16", features = ["ron"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
bevy_rand = { version = "0.14", default-features = false, features = ["std", "wyrand"] }
bevy_prng = { version = "0.14", default-features = false, features = ["std", "wyrand"] }
rand_core = "0.10"
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["json"] }
inquire = "0.7"
moonshine-kind = "0.4.2"

[features]
# Default to `dev` so plain `cargo check`/`cargo test`/`cargo run` pick up
# `bevy/dynamic_linking`. Avoids static relink of the bevy_* graph on every
# rebuild and stops duplicating bevy symbols across every integration-test
# binary. Resulting binaries require the bevy `.so` from `target/` — dev-only,
# not distributable. Use `--no-default-features` for any future release path.
default = ["dev"]
# Pulls winit + wgpu + bevy_ui + egui only when building for visual inspection.
# Includes `bevy/dynamic_linking` so incremental rebuilds don't statically relink
# the entire bevy_* graph. Dev-only; produces a non-distributable binary that
# requires the bevy .so from target/.
# `tonemapping_luts` ships the KTX2 LUT the camera's `Tonemapping::TonyMcMapface`
# samples; without it the whole scene renders magenta (missing-LUT fallback).
windowed = ["dep:bevy_egui", "dep:bevy_enoki", "bevy/2d", "bevy/tonemapping_luts", "bevy/dynamic_linking"]
dev = ["bevy/dynamic_linking"]

[dev-dependencies]
insta = "1"
# Parametric / property-based testing. `rstest` for table-driven `#[case]` tests,
# `proptest` for invariant tests with seeded shrinking. Both feed into the same
# nextest `agent` profile and respect R004 (no wall-clock, seeded RNG).
rstest = "0.23"
proptest = "1.6"

# Agent-first observability: dump Bevy `Schedule` graphs to .gsd/schedules/*.dot
# so future agents can read the system ordering without grepping `add_systems` /
# `.before()` / `.after()` across the codebase. Run with:
#   cargo run --example dump_schedule
bevy_mod_debugdump = "0.15"

[[example]]
name = "dump_schedule"
path = "examples/dump_schedule.rs"

# Standalone particle VFX viewer. Faithful render setup (HDR + bloom + soft
# material) so the look matches the game; dropdown enumerates every
# .particle.ron plus composite layer presets. Windowed-only (K001: human-run).
#   cargo run --features windowed --bin vfx_viewer
[[bin]]
name = "vfx_viewer"
path = "src/bin/vfx_viewer.rs"
required-features = ["windowed"]


[profile.dev]
opt-level = 1
codegen-backend = "cranelift"
# Trim DWARF to line tables only: backtraces stay usable (file:line) but
# variable/type entries are dropped. Roughly -40/60% on the `.rlib`s in
# `target/debug/deps`, which dominate disk usage for this project.
debug = "line-tables-only"

# Cranelift backend ICEs on many third-party crates (rustc nightly bug,
# concurrency_limiter.rs:84 `Option::unwrap() on None`). Force LLVM for ALL
# dependencies; only the workspace member `bevyrogue` keeps cranelift for fast
# incremental builds. Remove the wildcard override when nightly fixes the ICE.
[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level = 0
# 95% of `target/debug/deps` weight lives in third-party crates — strip their
# DWARF too. If you ever need gdb/lldb inside a dep, flip this to "full".
debug = "line-tables-only"

