[package]
name = "m021-timeline-fsm-spike"
version = "0.0.1"
edition = "2021"
publish = false

# Standalone spike: zero deps, std-only.
# NOT a workspace member of the parent crate. Build with:
#   cargo test --manifest-path .gsd/workflows/spikes/M021-timeline-fsm/Cargo.toml

[lib]
path = "src/lib.rs"

[[test]]
name = "validation"
path = "tests/validation.rs"
